# bayesian-portfolio

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: fetch.py
notebooks/: analysis.ipynb
src/bayesian_portfolio/: __init__.py  black_litterman.py  covariance.py  evaluation.py  frontier.py  priors.py
tests/: test_black_litterman.py  test_covariance.py  test_frontier.py  test_priors.py
